Figured out how to add additional files to CMakeLists

--- a/cmake_cross_platform/CMakeLists.txt
+++ b/cmake_cross_platform/CMakeLists.txt
@@ -4,6 +4,9 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (cmake_cross_platform "cmake_cross_platform.cpp" "cmake_cross_platform.h")
+add_executable (cmake_cross_platform 
+	"cmake_cross_platform.cpp" "cmake_cross_platform.h"
+	"testfile.cpp" "testfile.h"
+)
 
 # TODO: Add tests and install targets if needed.
