--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,5 @@ project ("cmake_cross_platform")
 
 # Include sub-projects.
 add_subdirectory ("cmake_cross_platform")
-if(MSVC)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
-endif(MSVC)
-
 set_property(TARGET cmake_cross_platform PROPERTY CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
